<resources>
    <string name="app_name">骁智课堂</string>
    <string name="select_user">你是：</string>
    <string name="user_teacher">老师</string>
    <string name="user_student">学生</string>
    <string name="schoole_name">广东技术师范学院</string>
    <string name="user">用户：</string>
    <string name="password">密码：</string>
    <string name="login">登录</string>
    <string name="login_error_toast">用户名或者密码不正确</string>
    <string name="before_class">课前</string>
    <string name="in_class">上课</string>
    <string name="personnal_center">个人</string>
    <string name="info_class">课程信息</string>
    <string name="loading">加载中...</string>
    <string name="class_info">课程信息</string>
    <string name="class_time">时间:</string>
    <string name="class_location">课室:</string>
    <string name="bespoke_info">预约信息</string>
    <string name="need_person_num">应到数：</string>
    <string name="fact_person_num">预约数：</string>
    <string name="prompt_message">说明：请选择用户类型</string>
    <string name="mention">课堂点名</string>
    <string name="score">实验成绩</string>
    <string name="in_class_name">姓名：</string>
    <string name="tv_in_class_num">学号：</string>
    <string name="in_class_cancle">撤销</string>
    <string name="in_class_upload">提交</string>
    <string name="excellence">优秀</string>
    <string name="good">良好</string>
    <string name="pass">及格</string>
    <string name="no_pass">差劲</string>
    <string name="select_score">课堂实验成绩</string>
    <string name="sure">确定</string>
    <string name="tv_in_class_null_data">没有更多名单了</string>
    <string name="register">迟到补签</string>
    <string name="broadcast">发布公告</string>
    <string name="remind">课程提醒</string>
    <string name="setting">修改密码</string>
    <string name="interacrion">课程互动</string>
    <string name="cocyright">版权声明</string>
    <string name="teacher_name">用户名</string>
    <string name="broadcast_title">标题</string>
    <string name="broadcast_content">公告内容</string>
    <string name="saved_broadcast">保存公告</string>
    <string name="broadcast_item_title">标题：</string>
    <string name="broadcast_item_content">内容:</string>
    <string name="add_broadcast">添加公告</string>
    <string name="cancle_broadcast">退出编辑</string>
    <string name="past_pass">原始密码：</string>
    <string name="new_pass">重置密码：</string>
    <string name="resum_pass">核对密码：</string>
    <string name="copyright">\t\t\t使用软件意味用户是自愿使用本软件，并且是接受此许可协议的所有条款。如果不同意此许可协议就不能使用本软件。尊重原始作者的著作权，不得修改、隐藏、删除后台版权声明及支持信息。该软件用户不得利用软件发表、传播、储存违反国家法律、危害国家安全、祖国统一、社会稳定的内容，或侮辱、诽谤、色情、暴力等任何违反国家法律法规政策的内容。不得利用软件传播、储存侵害他人知识产权、商业秘密权等合法权利的内容。</string>
    <string name="icon_copyright">著作权所有 © 黄培彦</string>
    <string name="copyright_declare">版权©声明</string>
    <string name="mention_detail">点击答到的乖孩子头像，跳过旷课的坏蛋</string>
    <string name="score_detail">点击三好生头像，送上最好的优秀奖励</string>
    <string name="broadcast_detail">通知的麻烦事就不交给学委啦！公告替我搞定</string>
    <string name="user_exit">退出登录</string>
    <string name="take_note">笔记</string>
    <string name="person_test">测试</string>
    <string name="student_test">测试</string>
    <string name="before_que">上一题</string>
    <string name="next_que">下一题</string>
    <string name="submit">核对</string>
    <string name="notes">笔记</string>
    <string name="photo">拍照</string>
    <string name="record">录音</string>
    <string name="viedo">录像</string>
</resources>
