<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_notes"
            style="@style/TakeNotesListItemStyles"
            android:drawableLeft="@mipmap/notes"
            android:text="@string/notes"/>

        <Button
            android:id="@+id/bt_photo"
            style="@style/TakeNotesListItemStyles"
            android:drawableLeft="@mipmap/photo"
            android:text="@string/photo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_record"
            style="@style/TakeNotesListItemStyles"
            android:drawableLeft="@mipmap/record"
            android:text="@string/record"/>

        <Button
            android:id="@+id/bt_video"
            style="@style/TakeNotesListItemStyles"
            android:drawableLeft="@mipmap/video"
            android:text="@string/viedo"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_take_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:layout_weight="1"
        android:background="@color/little_gray"
        />


</LinearLayout>