<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_person_center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/little_gray"
    android:orientation="vertical"
    >

    <include layout="@layout/top_tab_line_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/little_gray"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/iv_user_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="5dp"
                android:src="@drawable/select_user_student"/>

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/teacher_name"
                android:textColor="@color/colorPrimaryDark"/>

            <LinearLayout
                android:id="@+id/ll_register_later"
                style="@style/PersonnalCenterItem"
                android:layout_marginTop="5dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/register"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawablePadding="190dp"
                    android:drawableRight="@mipmap/right"
                    android:gravity="center_vertical"
                    android:text="@string/register"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </LinearLayout>

            <include layout="@layout/top_tab_line_layout"/>

            <LinearLayout
                android:id="@+id/ll_broadcast"
                style="@style/PersonnalCenterItem"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/broadcast"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawablePadding="190dp"
                    android:drawableRight="@mipmap/right"
                    android:gravity="center_vertical"
                    android:text="@string/broadcast"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_remind"
                style="@style/PersonnalCenterItem"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/remind"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawablePadding="190dp"
                    android:drawableRight="@mipmap/right"
                    android:gravity="center_vertical"
                    android:text="@string/remind"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </LinearLayout>

            <include layout="@layout/top_tab_line_layout"/>

            <LinearLayout
                android:id="@+id/ll_setting"
                style="@style/PersonnalCenterItem"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/setting"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawablePadding="190dp"
                    android:drawableRight="@mipmap/right"
                    android:gravity="center_vertical"
                    android:text="@string/setting"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </LinearLayout>

            <include layout="@layout/top_tab_line_layout"/>

            <LinearLayout
                android:id="@+id/ll_interaction"
                style="@style/PersonnalCenterItem"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/interaction"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawablePadding="190dp"
                    android:drawableRight="@mipmap/right"
                    android:gravity="center_vertical"
                    android:text="@string/interacrion"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_user_exit"
                style="@style/PersonnalCenterItem"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/exit"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:drawablePadding="190dp"
                    android:drawableRight="@mipmap/right"
                    android:gravity="center_vertical"
                    android:text="@string/user_exit"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/copyright"
                android:text="@string/cocyright"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
