<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:gravity="center_vertical"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/past_pass"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_little_big"/>

        <EditText
            android:id="@+id/et_past_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_little_big"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="60dp"
        android:background="@color/colorPrimaryDark"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pass"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_little_big"/>

        <EditText
            android:id="@+id/et_new_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_little_big"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="60dp"
        android:background="@color/colorPrimaryDark"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resum_pass"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_little_big"/>

        <EditText
            android:id="@+id/et_resume_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/text_size_little_big"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="60dp"
        android:background="@color/colorPrimaryDark"
        />

    <Button
        android:id="@+id/bt_reset_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/dialog_tab_selector"
        android:text="@string/sure"
        android:textColor="@color/in_class_text_dialog_color_selector"
        />


</LinearLayout>